// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GetInvolvedLinkCard renders with multiple buttons 1`] = `
<div>
  <div
    class="sc-bdvwhi sc-gsDMPd iJXnQw vrLXS"
  >
    <div
      class="sc-bdvwhi sc-gsDMPd hPWTKU bEiwCA"
    >
      <h3
        class="sc-bkkgYE zCEfG"
      >
        Help us improve
      </h3>
      Teachers are at the heart of everything we build.
    </div>
    <div
      class="sc-bdvwhi sc-gsDMPd hPWTKU erQEnP"
    >
      <div
        class="sc-bdvwhi sc-iqsgXZ giIlgC hjfwPa"
      >
        <div
          class="sc-bdvwhi kAFHfV grey-shadow"
        />
        <div
          class="sc-bdvwhi kAFHfV yellow-shadow"
        />
        <a
          class="sc-eCIkAO sc-jrQAon lhwatH eGeOxA internal-button"
          href="https://example.com/research"
        >
          <div
            class="sc-bdvwhi sc-gsDMPd hPWTKU dxGDwr"
          >
            <span
              class="sc-dkPwfY kXQhTZ"
            >
              Join the research panel
            </span>
          </div>
        </a>
      </div>
      <div
        class="sc-bdvwhi sc-iqsgXZ giIlgC hjfwPa"
      >
        <div
          class="sc-bdvwhi kAFHfV grey-shadow"
        />
        <div
          class="sc-bdvwhi kAFHfV yellow-shadow"
        />
        <a
          class="sc-eCIkAO sc-jrQAon lhwatH eGeOxA internal-button"
          href="https://example.com/explore"
        >
          <div
            class="sc-bdvwhi sc-gsDMPd hPWTKU dxGDwr"
          >
            <span
              class="sc-dkPwfY kXQhTZ"
            >
              Explore our research
            </span>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`GetInvolvedLinkCard renders with single button 1`] = `
<div>
  <div
    class="sc-bdvwhi sc-gsDMPd iJXnQw vrLXS"
  >
    <div
      class="sc-bdvwhi sc-gsDMPd hPWTKU bEiwCA"
    >
      <h2
        class="sc-bkkgYE zCEfG"
      >
        Give your feedback
      </h2>
      Share your story and we'll send you a gift voucher as a thanks for your time. Whether you've planned more efficiently, strengthened your subject knowledge or refreshed your curriculum design, your experience can inspire other teachers.
    </div>
    <div
      class="sc-bdvwhi sc-gsDMPd hPWTKU erQEnP"
    >
      <div
        class="sc-bdvwhi sc-iqsgXZ giIlgC hjfwPa"
      >
        <div
          class="sc-bdvwhi kAFHfV grey-shadow"
        />
        <div
          class="sc-bdvwhi kAFHfV yellow-shadow"
        />
        <a
          class="sc-eCIkAO sc-jrQAon lhwatH eGeOxA internal-button"
          href="#"
        >
          <div
            class="sc-bdvwhi sc-gsDMPd hPWTKU dxGDwr"
          >
            <span
              class="sc-dkPwfY kXQhTZ"
            >
              Get in touch
            </span>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`GetInvolvedLinkCard renders without buttons 1`] = `
<div>
  <div
    class="sc-bdvwhi sc-gsDMPd iJXnQw vrLXS"
  >
    <div
      class="sc-bdvwhi sc-gsDMPd hPWTKU bEiwCA"
    >
      <h3
        class="sc-bkkgYE zCEfG"
      >
        No Buttons
      </h3>
      Content without buttons
    </div>
  </div>
</div>
`;
